	(PokerAvatarTestCase.test47_startPackets): Wrote function.
	(PokerAvatarTestCase.badSeatTable): Wrote function.
	(PokerAvatarTestCase.test48_seatPackets): Wrote function.
	(PokerAvatarTestCase.test49_badRebuy): Wrote function.
	(PokerAvatarTestCase.badBuyRebuyRequest): Wrote function.
	(PokerAvatarTestCase.test50_chat): Wrote function.
	(PokerAvatarTestCase.chatItUp): Wrote function.

2008-03-01  Loic Dachary <loic@dachary.org>

	* Release 1.3.0

	* tests/test-pokeravatar.py.in: no need to check the position as it
	  is 1) redundant with the serial, 2) consistency has been checked
	  in the pokerexplain.py tests
	* tests/test-pokerexplain.py.in: add check to make sure the
	  position field of the PokerPosition packet is set.
	* pokernetwork/pokerexplain.py: because PacketPosition does not
	  serialize the serial member, the seat in position must be set for
	  clients requiring explain mode over the network (as opposed to
	  python based clients that embed the library).

2008-02-29  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerservice.py: fix the queuing packet bug +
	  document HTTP based protocols
	* tests/test-webservice.py.in: test to prove the queuing packet bug

2008-02-26  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.loseConnection): Wrote function.
	(PokerAvatarTestCase.test44_possibleObserverLoggedIn): Wrote function.
	(PokerAvatarTestCase.test45_possibleObserverLoggedInWithAnte):
	Wrote function.
	(PokerAvatarTestCase.loseConnectionAnte): Wrote function.
	(PokerAvatarTestCase.listTables): Four tables now.

2008-02-25  Loic Dachary <loic@dachary.org>

	* tests/test-pokeravatar.py.in: fix https://gna.org/bugs/?11148
	  allows to discard the CORRECTEDtourneyRegister in favor of
	  tourneyRegister
	* pokernetwork/pokerservice.py: error + message functions convert
	  to string before concatenating. (fixes
	  https://gna.org/bugs/?11148).
	* pokernetwork/pokeravatar.py: listHands fixed to accomodate