@@ -2189,6 +2189,36 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.chatItUp, 0, 101, "I drink your milkshake!")
         return d
     # ------------------------------------------------------------------------
+    def leaveTable(self, (client, packet), id, gameId):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerPlayerLeave(game_id = gameId,
+                                                    serial = client.getSerial()))
+        found = 0
+        for packet in avatar.resetPacketsQueue():
+            print "MYPACKET: "
+            print packet
+            if packet.type == PACKET_POKER_PLAYER_LEAVE:
+                found += 1
+                self.assertEquals(packet.game_id, gameId)
+                self.assertEquals(packet.serial, client.getSerial())
+                self.assertEqual(packet.seat, 1)
+        self.assertEquals(found, 1)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test51_doLeave(self):
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 101)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.autoBlindAnte, 0, 101)
+        d.addCallback(self.sitTable, 0, 101)
+        d.addCallback(self.readyToPlay, 0, 101)
+        d.addCallback(self.leaveTable, 0, 101)
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -2204,7 +2234,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test50"
+#    loader.methodPrefix = "test51"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
